2003-04-18  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.3b.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

	* tests/dejagnu3.test, tests/dejagnu4.test, tests/dejagnu5.test:
	Distribute dejagnu test cases, so that distcheck actually runs them.

2003-04-18  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/am/dejagnu.am (site.exp): Don't define tool in site.exp,
	because we set that by invoking runtest with --tool.
	* tests/Makefile.am (TESTS): Add dejagnu4.test, dejagnu5.test,
	dejagnu6.test, dejagnu7.test.
	* tests/dejagnu4.test: New test.
	* tests/dejagnu5.test: New test.
	* tests/dejagnu6.test: New test.
	* tests/dejagnu7.test: New test.

	* tests/dejagnu3.test: Make sure the DejaGnu test is actually run.

2003-04-18  Jim Meyering  <jim@meyering.net>

	* automake.in (variable_output): Fix typo in comment s/is/if/.

2003-04-17  Jim Meyering  <jim@meyering.net>

	* lib/am/yacc.am (?GENERIC?%EXT%%DERIVED-EXT% aka .y.c): Don't redirect
	directly to $@.  Instead, redirect to $@t and rename upon success.
	Also, move the commands that update $@ so they are last.  Otherwise,
	this rule could leave the user with an up to date target (.c file)
	but with a missing or corrupted corresponding .h file.
	Add (C) and `2002' to Copyright line, at Alexandre's request.

2003-04-17  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* tests/defs.in: Handle required=runtest, to detect runtest
	from DejaGnu.
	* tests/Makefile.am (TESTS): Add dejagnu3.test.
	* tests/dejagnu3.test: New test.

2003-04-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/distdir.am (distuninstallcheck, distcleancheck): Silence
	these rules, so that we don't confuse users by echoing
	"echo ERROR:..." commands which are not run.

2003-04-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_files): Augment the error message
	about AM_INIT_AUTOMAKE not found.
	Suggested by Bruno Haible.

2003-04-11  Alexandre Duret-Lutz  <adl@gnu.org>