@@ -1,5 +1,8 @@
 2003-04-18  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/defs.in: Handle required=etags to work around
+	Exuberant Ctags.
+
 	* configure.in: Bump version to 1.7.3b.
 
 	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
